# explorers-dsr-39

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_processing.yml
data/: iq_timeseries_output.csv  scratch_output.csv  sj_timeseries_output.csv
data/02_intermediate/: train_data_dropna.csv
notebooks/: Jul-18-Baseline-model-exploration.ipynb  Jul-18-Data-loading.ipynb  Jul-19-Baseline-model-reformatted.ipynb  Jul-19-Boosting.ipynb  Jul-19-From-scratch.ipynb  Jul-19-Rand-Forest-regressor.ipynb  Jul-19-Timeseries.ipynb  Jul-20-Fourier-features.ipynb  Jul-20-Gridsearch.ipynb  Jul-20-Model-both-cities.ipynb  Jul-20-Model-selection.ipynb  compound_output.csv  dummy_pipeline.ipynb  gridsearch_seasoned_output.csv  knn_seasoned_output.csv  lagged_output.csv  models_by_city.ipynb  output.csv  scratch_output.csv  scratch_output_log.csv  seasoned_output.csv  timeseries_output.csv
src/explorers_dsr_39/: __init__.py  __main__.py  settings.py
src/explorers_dsr_39/pipelines/data_processing/: nodes.py  pipeline.py
