[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "explorers_dsr_39"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
explorers-dsr-39 = "explorers_dsr_39.__main__:main"

[tool.kedro]
package_name = "explorers_dsr_39"
project_name = "explorers-dsr-39"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "explorers_dsr_39.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
